--- a/requirements.txt
+++ b/requirements.txt
@@ -18,7 +18,7 @@ Werkzeug==2.3.7
 
 # Socket.IO for real-time features
 python-socketio==5.10.0
-python-engineio==4.7.1
+python-engineio>=4.8.0
 
 # Other utilities
 email-validator==2.1.0
