--- a/requirements.txt
+++ b/requirements.txt
@@ -21,5 +21,12 @@ python-socketio==5.10.0
 python-engineio>=4.8.0
 
 # Other utilities
-email-validator==2.1.0
+email-validator==2.31.0
 requests==2.31.0
+
+# Document processing
+PyPDF2==3.0.1
+pdfplumber==0.11.7
+python-docx==1.2.0
+reportlab==4.4.4
+python-pptx==1.0.2
