--- a/requirements.txt
+++ b/requirements.txt
@@ -35,7 +35,7 @@ volcengine-python-sdk>=1.0.78  # ByteDance Ark API support (optional)
 
 # QR Code generation
 qrcode[pil]==7.4.2
-Pillow==10.1.0
+Pillow>=10.1.0
 
 # Document processing
 PyPDF2==3.0.1
